// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpinnerDotted matches the snapshot 1`] = `
<div>
  <svg
    fill="none"
    style="color: rgb(255, 255, 255); overflow: visible; width: 100px;"
    viewBox="0 0 66 66"
  >
    <circle
      cx="33"
      cy="33"
      fill="currentColor"
      r="1.5"
      style="transform: translate(22px, -20px); animation: spinners-react-dotted-shrink 20s cubic-bezier(0, 0.9, 0, 0.9) 0s infinite;"
    />
    <circle
      cx="33"
      cy="33"
      fill="currentColor"
      r="1.5"
      style="transform: translate(29px, 0px); animation: spinners-react-dotted-shrink 20s cubic-bezier(0, 0.9, 0, 0.9) 1s infinite;"
    />
    <circle
      cx="33"
      cy="33"
      fill="currentColor"
      r="1.5"
      style="transform: translate(22px, 20px); animation: spinners-react-dotted-shrink 20s cubic-bezier(0, 0.9, 0, 0.9) 2s infinite;"
    />
    <circle
      cx="33"
      cy="33"
      fill="currentColor"
      r="1.5"
      style="transform: translate(0px, 30px); animation: spinners-react-dotted-shrink 20s cubic-bezier(0, 0.9, 0, 0.9) 3s infinite;"
    />
    <circle
      cx="33"
      cy="33"
      fill="currentColor"
      r="1.5"
      style="transform: translate(-23px, 20px); animation: spinners-react-dotted-shrink 20s cubic-bezier(0, 0.9, 0, 0.9) 4s infinite;"
    />
    <circle
      cx="33"
      cy="33"
      fill="currentColor"
      r="1.5"
      style="transform: translate(-30px, 0px); animation: spinners-react-dotted-shrink 20s cubic-bezier(0, 0.9, 0, 0.9) 5s infinite;"
    />
    <circle
      cx="33"
      cy="33"
      fill="currentColor"
      r="1.5"
      style="transform: translate(-23px, -20px); animation: spinners-react-dotted-shrink 20s cubic-bezier(0, 0.9, 0, 0.9) 6s infinite;"
    />
    <circle
      cx="33"
      cy="33"
      fill="currentColor"
      r="1.5"
      style="transform: translate(0px, -30px); animation: spinners-react-dotted-shrink 20s cubic-bezier(0, 0.9, 0, 0.9) 7s infinite;"
    />
    <circle
      cx="33"
      cy="33"
      fill="currentColor"
      r="3"
      style="animation: spinners-react-dotted-center 20s ease-out infinite; transform-origin: center;"
    />
  </svg>
</div>
`;

exports[`SpinnerDotted matches the snapshot with default props 1`] = `
<div>
  <svg
    fill="none"
    style="color: rgb(56, 173, 72); overflow: visible; width: 50px;"
    viewBox="0 0 66 66"
  >
    <circle
      cx="33"
      cy="33"
      fill="currentColor"
      r="3"
      style="transform: translate(22px, -20px); animation: spinners-react-dotted-shrink 2s cubic-bezier(0, 0.9, 0, 0.9) 0s infinite;"
    />
    <circle
      cx="33"
      cy="33"
      fill="currentColor"
      r="3"
      style="transform: translate(29px, 0px); animation: spinners-react-dotted-shrink 2s cubic-bezier(0, 0.9, 0, 0.9) 0.1s infinite;"
    />
    <circle
      cx="33"
      cy="33"
      fill="currentColor"
      r="3"
      style="transform: translate(22px, 20px); animation: spinners-react-dotted-shrink 2s cubic-bezier(0, 0.9, 0, 0.9) 0.2s infinite;"
    />
    <circle
      cx="33"
      cy="33"
      fill="currentColor"
      r="3"
      style="transform: translate(0px, 30px); animation: spinners-react-dotted-shrink 2s cubic-bezier(0, 0.9, 0, 0.9) 0.30000000000000004s infinite;"
    />
    <circle
      cx="33"
      cy="33"
      fill="currentColor"
      r="3"
      style="transform: translate(-23px, 20px); animation: spinners-react-dotted-shrink 2s cubic-bezier(0, 0.9, 0, 0.9) 0.4s infinite;"
    />
    <circle
      cx="33"
      cy="33"
      fill="currentColor"
      r="3"
      style="transform: translate(-30px, 0px); animation: spinners-react-dotted-shrink 2s cubic-bezier(0, 0.9, 0, 0.9) 0.5s infinite;"
    />
    <circle
      cx="33"
      cy="33"
      fill="currentColor"
      r="3"
      style="transform: translate(-23px, -20px); animation: spinners-react-dotted-shrink 2s cubic-bezier(0, 0.9, 0, 0.9) 0.6000000000000001s infinite;"
    />
    <circle
      cx="33"
      cy="33"
      fill="currentColor"
      r="3"
      style="transform: translate(0px, -30px); animation: spinners-react-dotted-shrink 2s cubic-bezier(0, 0.9, 0, 0.9) 0.7000000000000001s infinite;"
    />
    <circle
      cx="33"
      cy="33"
      fill="currentColor"
      r="6"
      style="animation: spinners-react-dotted-center 2s ease-out infinite; transform-origin: center;"
    />
  </svg>
</div>
`;
